--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>Hello AWS!!</h1>
+<h1>Hello AWS!!!</h1>
 <h3>Angular code has been updated and deployed to EC2 using pipeline. Steps are: </h3>
 <ol>
     <li>Create EC2 instance</li>
